@@ -17,6 +17,7 @@ import jakarta.ws.rs.NotFoundException;
 import java.util.Collections;
 import java.util.List;
 import org.apache.commons.lang3.RandomUtils;
+import org.broadinstitute.consent.http.AbstractTestHelper;
 import org.broadinstitute.consent.http.db.InstitutionDAO;
 import org.broadinstitute.consent.http.db.LibraryCardDAO;
 import org.broadinstitute.consent.http.db.UserDAO;
@@ -34,7 +35,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
-class LibraryCardServiceTest {
+class LibraryCardServiceTest extends AbstractTestHelper {
 
   private LibraryCardService service;
 
@@ -53,30 +54,75 @@ class LibraryCardServiceTest {
   }
 
   @Test
-  // Test LC create with userId and email
-  void testCreateLibraryCardFullUserDetails() {
+  // Test Admin LC create with userId and email
+  void testCreateLibraryCardFullUserDetailsAsAdmin() {
     Institution institution = testInstitution();
     User user = testUser(institution.getId());
     user.setEmail("testemail");
     User adminUser = createUserWithRole(UserRoles.ADMIN.getRoleId(), UserRoles.ADMIN.getRoleName());
     when(userDAO.findUserById(user.getUserId())).thenReturn(user);
-    when(institutionDAO.findInstitutionById(institution.getId())).thenReturn(institution);
-    when(institutionService.findInstitutionForEmail(user.getEmail())).thenReturn(institution);
 
-    LibraryCard payload = testLibraryCard(institution.getId(), user.getUserId());
+    LibraryCard payload = testLibraryCard(user.getUserId());
     payload.setUserEmail(user.getEmail());
     payload.setUserName("username");
     payload.setCreateUserId(RandomUtils.nextInt(1, 10));
-    payload.setEraCommonsId("testera");
 
     //last two calls in the function, no need to test within this service test file
     LibraryCard createdCard = new LibraryCard();
     when(libraryCardDAO.findLibraryCardById(anyInt())).thenReturn(createdCard);
 
     assertEquals(createdCard, service.createLibraryCard(payload, adminUser));
-    verify(libraryCardDAO).insertLibraryCard(eq(user.getUserId()), eq(institution.getId()),
-        eq(payload.getEraCommonsId()), eq(payload.getUserName()), eq(user.getEmail()),
+    verify(libraryCardDAO).insertLibraryCard(eq(user.getUserId()),
+        eq(payload.getUserName()), eq(user.getEmail()),
         eq(payload.getCreateUserId()), any());
+  }
+
+  @Test
+  // Test SO LC create with userId and email success case
+  void testCreateLibraryCardFullUserDetailsAsSOSameInstitution() {
+    Institution institution = testInstitution();
+    User user = testUser(institution.getId());
+    user.setEmail("testemail");
+    User soUser = createUserWithRole(UserRoles.SIGNINGOFFICIAL.getRoleId(), UserRoles.SIGNINGOFFICIAL.getRoleName());
+    soUser.setInstitutionId(institution.getId());
+    when(userDAO.findUserById(user.getUserId())).thenReturn(user);
+    when(institutionDAO.findInstitutionById(institution.getId())).thenReturn(institution);
+    when(institutionService.findInstitutionForEmail(user.getEmail())).thenReturn(institution);
+
+    LibraryCard payload = testLibraryCard(user.getUserId());
+    payload.setUserEmail(user.getEmail());
+    payload.setUserName("username");
+    payload.setCreateUserId(randomInt(1, 10));
+
+    //last two calls in the function, no need to test within this service test file
+    LibraryCard createdCard = new LibraryCard();
+    when(libraryCardDAO.findLibraryCardById(anyInt())).thenReturn(createdCard);
+
+    assertEquals(createdCard, service.createLibraryCard(payload, soUser));
+    verify(libraryCardDAO).insertLibraryCard(eq(user.getUserId()),
+        eq(payload.getUserName()), eq(user.getEmail()),
+        eq(payload.getCreateUserId()), any());
+  }
+
+  @Test
+  // Test SO LC create with userId and email but in different institutions
+  void testCreateLibraryCardFullUserDetailsAsSODifferentInstitution() {
+    Institution institution = testInstitution();
+    User user = testUser(institution.getId());
+    user.setEmail("testemail");
+    User soUser = createUserWithRole(UserRoles.SIGNINGOFFICIAL.getRoleId(), UserRoles.SIGNINGOFFICIAL.getRoleName());
+    // Signing officials should not create LCs for users outside their institution.
+    soUser.setInstitutionId(institution.getId()+1);
+    when(userDAO.findUserById(user.getUserId())).thenReturn(user);
+    when(institutionDAO.findInstitutionById(soUser.getInstitutionId())).thenReturn(new Institution());
+    when(institutionService.findInstitutionForEmail(user.getEmail())).thenReturn(institution);
+
+    LibraryCard payload = testLibraryCard(user.getUserId());
+    payload.setUserEmail(user.getEmail());
+    payload.setUserName("username");
+    payload.setCreateUserId(randomInt(1, 10));
+
+    assertThrows(BadRequestException.class, () -> service.createLibraryCard(payload, soUser));
   }
 
   @Test
@@ -88,16 +134,13 @@ class LibraryCardServiceTest {
     user.setUserId(null);
     user.setEmail("testemail");
 
-    when(institutionDAO.findInstitutionById(anyInt())).thenReturn(institution);
-    when(institutionService.findInstitutionForEmail(user.getEmail())).thenReturn(institution);
-
     // last two calls in the function, no need to test within this service test file
     when(libraryCardDAO.findLibraryCardById(anyInt())).thenReturn(new LibraryCard());
 
-    LibraryCard payload = testLibraryCard(institution.getId(), user.getUserId());
+    LibraryCard payload = testLibraryCard(user.getUserId());
     payload.setUserEmail(user.getEmail());
     service.createLibraryCard(payload, adminUser);
-    verify(libraryCardDAO).insertLibraryCard(eq(null), anyInt(), eq(null), eq(null), any(), eq(null), any());
+    verify(libraryCardDAO).insertLibraryCard(eq(null), eq(null), any(), eq(null), any());
   }
 
   @Test
@@ -109,13 +152,11 @@ class LibraryCardServiceTest {
     User adminUser = createUserWithRole(UserRoles.ADMIN.getRoleId(), UserRoles.ADMIN.getRoleName());
 
     when(userDAO.findUserById(user.getUserId())).thenReturn(user);
-    when(institutionDAO.findInstitutionById(institution.getId())).thenReturn(institution);
-    when(institutionService.findInstitutionForEmail(user.getEmail())).thenReturn(institution);
     when(libraryCardDAO.findLibraryCardsByUserId(user.getUserId())).thenReturn(List.of());
 
-    LibraryCard payload = testLibraryCard(institution.getId(), user.getUserId());
+    LibraryCard payload = testLibraryCard(user.getUserId());
     int cardId = 1;
-    when(libraryCardDAO.insertLibraryCard(anyInt(), anyInt(), eq(null), eq(null), any(), eq(null), any()))
+    when(libraryCardDAO.insertLibraryCard(anyInt(), eq(null), any(), eq(null), any()))
         .thenReturn(cardId);
     LibraryCard newCard = new LibraryCard();
     when(libraryCardDAO.findLibraryCardById(cardId)).thenReturn(newCard);
@@ -129,11 +170,9 @@ class LibraryCardServiceTest {
     User user = testUser(institution.getId());
     user.setEmail("testemail");
     when(userDAO.findUserById(user.getUserId())).thenReturn(user);
-    when(institutionDAO.findInstitutionById(institution.getId())).thenReturn(institution);
-    when(institutionService.findInstitutionForEmail(user.getEmail())).thenReturn(institution);
-    LibraryCard libraryCard = testLibraryCard(institution.getId(), user.getUserId());
+    LibraryCard libraryCard = testLibraryCard(user.getUserId());
     libraryCard.setCreateUserId(RandomUtils.nextInt(1, 10));
-    when(libraryCardDAO.insertLibraryCard(eq(user.getUserId()), eq(institution.getId()), eq(null), eq(null), eq(user.getEmail()),
+    when(libraryCardDAO.insertLibraryCard(eq(user.getUserId()), eq(null), eq(user.getEmail()),
         eq(libraryCard.getCreateUserId()), any())).thenReturn(123);
     service.createLibraryCard(libraryCard,
         createUserWithRole(UserRoles.ADMIN.getRoleId(), UserRoles.ADMIN.getRoleName()));
@@ -153,10 +192,10 @@ class LibraryCardServiceTest {
     when(libraryCardDAO.findLibraryCardsByUserId(anyInt())).thenReturn(Collections.emptyList());
 
     // last two calls in the function, no need to test within this service test file
-    when(libraryCardDAO.insertLibraryCard(anyInt(), anyInt(), eq(null), eq(null), anyString(), eq(null), any())).thenReturn(1);
+    when(libraryCardDAO.insertLibraryCard(anyInt(), eq(null), anyString(), eq(null), any())).thenReturn(1);
     when(libraryCardDAO.findLibraryCardById(anyInt())).thenReturn(new LibraryCard());
 
-    LibraryCard payload = testLibraryCard(institution.getId(), soUser.getUserId());
+    LibraryCard payload = testLibraryCard(soUser.getUserId());
     payload.setUserEmail("testemail");
     service.createLibraryCard(payload, soUser);
   }
@@ -173,7 +212,7 @@ class LibraryCardServiceTest {
     when(userDAO.findUserById(anyInt())).thenReturn(user);
     when(libraryCardDAO.findLibraryCardsByUserId(anyInt())).thenReturn(Collections.emptyList());
 
-    LibraryCard payload = testLibraryCard(institution.getId(), user.getUserId());
+    LibraryCard payload = testLibraryCard(user.getUserId());
     payload.setUserEmail("differentemail");
     assertThrows(ConsentConflictException.class, () -> service.createLibraryCard(payload, adminUser));
   }
@@ -184,7 +223,7 @@ class LibraryCardServiceTest {
     Institution institution = testInstitution();
     User user = testUser(institution.getId());
     User adminUser = createUserWithRole(UserRoles.ADMIN.getRoleId(), UserRoles.ADMIN.getRoleName());
-    LibraryCard savedCard = testLibraryCard(institution.getId(), user.getUserId());
+    LibraryCard savedCard = testLibraryCard(user.getUserId());
     LibraryCard payload = savedCard;
 
     when(libraryCardDAO.findLibraryCardsByUserId(anyInt())).thenReturn(
@@ -199,7 +238,7 @@ class LibraryCardServiceTest {
     User user = testUser(institution.getId());
     User adminUser = createUserWithRole(UserRoles.ADMIN.getRoleId(), UserRoles.ADMIN.getRoleName());
     user.setEmail("testemail");
-    LibraryCard savedCard = testLibraryCard(institution.getId(), null);
+    LibraryCard savedCard = testLibraryCard(null);
     savedCard.setUserEmail(user.getEmail());
 
     LibraryCard payload = savedCard;
@@ -215,8 +254,7 @@ class LibraryCardServiceTest {
   //Negative test, checks to see if error is thrown if email and userId are not provided
   void testCreateLibraryCardNoUserDetails() {
     User adminUser = createUserWithRole(UserRoles.ADMIN.getRoleId(), UserRoles.ADMIN.getRoleName());
-    Institution institution = testInstitution();
-    LibraryCard payload = testLibraryCard(institution.getId(), null);
+    LibraryCard payload = testLibraryCard(null);
 
     assertThrows(BadRequestException.class, () -> {
       service.createLibraryCard(payload, adminUser);
@@ -228,7 +266,7 @@ class LibraryCardServiceTest {
   void testCreateLibraryCard_InvalidInstitution() {
     User user = testUser(1);
     User adminUser = createUserWithRole(UserRoles.ADMIN.getRoleId(), UserRoles.ADMIN.getRoleName());
-    LibraryCard libraryCard = testLibraryCard(1, user.getUserId());
+    LibraryCard libraryCard = testLibraryCard(user.getUserId());
 
     assertThrows(BadRequestException.class, () -> service.createLibraryCard(libraryCard, adminUser));
   }
@@ -245,8 +283,7 @@ class LibraryCardServiceTest {
     User soUser = createUserWithRole(UserRoles.SIGNINGOFFICIAL.getRoleId(),
         UserRoles.SIGNINGOFFICIAL.getRoleName());
     soUser.setInstitutionId(1);
-    LibraryCard card = testLibraryCard(2, 2);
-    card.setInstitutionId(2);
+    LibraryCard card = testLibraryCard(2);
     assertThrows(BadRequestException.class, () -> service.createLibraryCard(card, soUser));
   }
 
@@ -255,8 +292,7 @@ class LibraryCardServiceTest {
     User soUser = createUserWithRole(UserRoles.SIGNINGOFFICIAL.getRoleId(),
         UserRoles.SIGNINGOFFICIAL.getRoleName());
     soUser.setInstitutionId(1);
-    LibraryCard card = testLibraryCard(2, 2);
-    card.setInstitutionId(2);
+    LibraryCard card = testLibraryCard(2);
     assertThrows(BadRequestException.class, () -> {
       service.createLibraryCard(card, soUser);
     });
@@ -266,13 +302,11 @@ class LibraryCardServiceTest {
   void testUpdateLibraryCard() {
     Institution institution = testInstitution();
     User user = testUser(institution.getId());
-    LibraryCard libraryCard = testLibraryCard(institution.getId(), user.getUserId());
-    when(institutionDAO.findInstitutionById(libraryCard.getInstitutionId())).thenReturn(institution);
-    when(institutionService.findInstitutionForEmail(user.getEmail())).thenReturn(institution);
+    LibraryCard libraryCard = testLibraryCard(user.getUserId());
     when(libraryCardDAO.findLibraryCardById(libraryCard.getId())).thenReturn(libraryCard);
     when(userDAO.findUserById(user.getUserId())).thenReturn(user);
     doNothing().when(libraryCardDAO)
-        .updateLibraryCardById(any(), any(), any(), any(), any(), any(), any(), any());
+        .updateLibraryCardById(any(), any(), any(), any(), any(), any());
 
     LibraryCard resultCard = service.updateLibraryCard(libraryCard, libraryCard.getId(), 1);
     assertNotNull(resultCard);
@@ -283,7 +317,7 @@ class LibraryCardServiceTest {
   void testUpdateLibraryCard_NotFound() {
     Institution institution = testInstitution();
     User user = testUser(institution.getId());
-    LibraryCard libraryCard = testLibraryCard(institution.getId(), user.getUserId());
+    LibraryCard libraryCard = testLibraryCard(user.getUserId());
 
     assertThrows(NotFoundException.class, () -> {
       service.updateLibraryCard(libraryCard, libraryCard.getId(), 1);
@@ -291,21 +325,11 @@ class LibraryCardServiceTest {
   }
 
   @Test
-  void testUpdateLibraryCard_InvalidInstitution() {
-    User user = testUser(1);
-    LibraryCard libraryCard = testLibraryCard(1, user.getUserId());
-    when(userDAO.findUserById(user.getUserId())).thenReturn(user);
-    when(libraryCardDAO.findLibraryCardById(libraryCard.getId())).thenReturn(libraryCard);
-
-    assertThrows(IllegalArgumentException.class, () -> service.updateLibraryCard(libraryCard, libraryCard.getId(), 1));
-  }
-
-  @Test
   void testDeleteLibraryCard_NotFound() {
     Institution institution = testInstitution();
     User user = testUser(institution.getId());
     user.setAdminRole();
-    LibraryCard libraryCard = testLibraryCard(institution.getId(), user.getUserId());
+    LibraryCard libraryCard = testLibraryCard(user.getUserId());
 
     assertThrows(NotFoundException.class, () -> service.deleteLibraryCardById(libraryCard.getId()));
   }
@@ -321,7 +345,7 @@ class LibraryCardServiceTest {
 
   @Test
   void testFindLibraryCardById() {
-    LibraryCard libraryCard = testLibraryCard(1, 1);
+    LibraryCard libraryCard = testLibraryCard(1);
     when(libraryCardDAO.findLibraryCardById(libraryCard.getId())).thenReturn(libraryCard);
     LibraryCard result = service.findLibraryCardById(libraryCard.getId());
     assertNotNull(result);
@@ -335,10 +359,10 @@ class LibraryCardServiceTest {
 
   @Test
   void testFindLibraryCardByIdDaa() {
-    LibraryCard libraryCard = testLibraryCard(1, 1);
+    LibraryCard libraryCard = testLibraryCard(1);
     DataAccessAgreement daa1 = new DataAccessAgreement();
     int daaId1 = RandomUtils.nextInt(1, 10);
-    int daaId2 = RandomUtils.nextInt(1, 10);;
+    int daaId2 = RandomUtils.nextInt(1, 10);
     daa1.setDaaId(daaId1);
     DataAccessAgreement daa2 = new DataAccessAgreement();
     daa2.setDaaId(daaId2);
@@ -358,7 +382,7 @@ class LibraryCardServiceTest {
   void testAddDaaToLibraryCard() {
     doNothing().when(libraryCardDAO).createLibraryCardDaaRelation(any(), any());
 
-    LibraryCard libraryCard = testLibraryCard(1, 1);
+    LibraryCard libraryCard = testLibraryCard(1);
     assertDoesNotThrow(() -> service.addDaaToLibraryCard(libraryCard.getId(), 1));
   }
 
@@ -366,7 +390,7 @@ class LibraryCardServiceTest {
   void testRemoveDaaFromLibraryCard() {
     doNothing().when(libraryCardDAO).deleteLibraryCardDaaRelation(any(), any());
 
-    LibraryCard libraryCard = testLibraryCard(1, 1);
+    LibraryCard libraryCard = testLibraryCard(1);
     assertDoesNotThrow(() -> service.removeDaaFromLibraryCard(libraryCard.getId(), 1));
   }
 
@@ -378,10 +402,10 @@ class LibraryCardServiceTest {
     signingOfficial.setInstitutionId(1);
     Integer userId = user.getUserId();
     List<LibraryCard> libraryCards = List.of(
-        testLibraryCard(1, userId),
-        testLibraryCard(1, userId)
+        testLibraryCard(userId),
+        testLibraryCard(userId)
     );
-    when(libraryCardDAO.findLibraryCardsByUserIdInstitutionId(user.getUserId(), user.getInstitutionId()))
+    when(libraryCardDAO.findLibraryCardsByUserId(user.getUserId()))
         .thenReturn(libraryCards);
     doNothing().when(libraryCardDAO).createLibraryCardDaaRelation(any(), any());
     List<LibraryCard> cards = service.addDaaToUserLibraryCardByInstitution(user, signingOfficial, 1);
@@ -398,26 +422,27 @@ class LibraryCardServiceTest {
   }
 
   @Test
-  void testAddDaaToUserLibraryCardByInstitutionNoLibraryCards() {
+  void testAddDaaToUserLibraryCardWithNoLibraryCards() {
     Institution institution = testInstitution();
     User user = testUser(institution.getId());
     user.setRoles(List.of(new UserRole(UserRoles.RESEARCHER.getRoleId(), UserRoles.RESEARCHER.getRoleName())));
     User signingOfficial = createUserWithRole(UserRoles.SIGNINGOFFICIAL.getRoleId(), UserRoles.SIGNINGOFFICIAL.getRoleName());
     signingOfficial.setInstitutionId(institution.getId());
     Integer userId = user.getUserId();
-    LibraryCard payload = testLibraryCard(institution.getId(), signingOfficial.getUserId());
+    LibraryCard payload = testLibraryCard(user.getUserId());
     payload.setUserEmail("testemail");
+    // There are two calls to findLibraryCardsByUserId for checks before creation
     when(libraryCardDAO.findLibraryCardsByUserId(userId))
-        .thenReturn(Collections.emptyList());
-    when(libraryCardDAO.findLibraryCardsByUserIdInstitutionId(userId, institution.getId()))
-        .thenReturn(Collections.emptyList(), Collections.singletonList(payload));
-    when(institutionDAO.findInstitutionById(anyInt())).thenReturn(institution);
+        .thenReturn(List.of())
+        .thenReturn(List.of())
+        .thenReturn(List.of(payload));
+    when(institutionDAO.findInstitutionById(institution.getId())).thenReturn(institution);
     when(institutionService.findInstitutionForEmail(any())).thenReturn(institution);
-    when(userDAO.findUserById(anyInt())).thenReturn(signingOfficial);
-    when(libraryCardDAO.insertLibraryCard(anyInt(), anyInt(), any(), any(), any(), anyInt(), any()))
+    when(userDAO.findUserById(user.getUserId())).thenReturn(user);
+    when(libraryCardDAO.insertLibraryCard(anyInt(), any(), any(), anyInt(), any()))
         .thenReturn(1);
     when(libraryCardDAO.findLibraryCardById(anyInt())).thenReturn(new LibraryCard());
-    when(libraryCardDAO.findLibraryCardById(anyInt())).thenReturn(new LibraryCard());
+
     List<LibraryCard> cards = service.addDaaToUserLibraryCardByInstitution(user, signingOfficial, 1);
     assertEquals(1, cards.size());
   }
@@ -436,16 +461,17 @@ class LibraryCardServiceTest {
     User user = testUser(1);
     Integer userId = user.getUserId();
     List<LibraryCard> libraryCards = List.of(
-        testLibraryCard(1, userId),
-        testLibraryCard(2, userId),
-        testLibraryCard(1, userId),
-        testLibraryCard(3, userId)
+        testLibraryCard(userId),
+        testLibraryCard(userId),
+        testLibraryCard(userId),
+        testLibraryCard(userId)
     );
     when(libraryCardDAO.findLibraryCardsByUserId(user.getUserId()))
         .thenReturn(libraryCards);
     doNothing().when(libraryCardDAO).deleteLibraryCardDaaRelation(any(), any());
-    List<LibraryCard> cards = service.removeDaaFromUserLibraryCards(user, 1, 1);
-    assertEquals(2, cards.size());
+    List<LibraryCard> cards = service.removeDaaFromUserLibraryCards(user, 1);
+    // The above deletion only affects the lc-daa join table and does not remove library cards
+    assertEquals(libraryCards.size(), cards.size());
   }
 
   @Test
@@ -453,14 +479,15 @@ class LibraryCardServiceTest {
     User user = testUser(1);
     Integer userId = user.getUserId();
     List<LibraryCard> libraryCards = List.of(
-        testLibraryCard(1, userId),
-        testLibraryCard(2, userId),
-        testLibraryCard(1, userId),
-        testLibraryCard(3, userId)
+        testLibraryCard(userId),
+        testLibraryCard(userId),
+        testLibraryCard(userId),
+        testLibraryCard(userId)
     );
     when(libraryCardDAO.findLibraryCardsByUserId(user.getUserId())).thenReturn(libraryCards);
-    List<LibraryCard> cards = service.removeDaaFromUserLibraryCards(user, 4, 1);
-    assertEquals(0, cards.size());
+    List<LibraryCard> cards = service.removeDaaFromUserLibraryCards(user, 1);
+    // DAA removal should not delete library cards
+    assertEquals(libraryCards.size(), cards.size());
   }
 
   @Test
@@ -473,21 +500,19 @@ class LibraryCardServiceTest {
     user.setEmail("testemail");
     LibraryCard newLc = new LibraryCard();
     newLc.setId(1);
-    newLc.setInstitutionId(institution.getId());
 
     when(userDAO.findUserById(anyInt())).thenReturn(user);
     when(institutionDAO.findInstitutionById(anyInt())).thenReturn(institution);
     when(institutionService.findInstitutionForEmail(user.getEmail())).thenReturn(institution);
     when(libraryCardDAO.findLibraryCardsByUserId(anyInt())).thenReturn(Collections.emptyList());
 
-    when(libraryCardDAO.insertLibraryCard(anyInt(), anyInt(), any(), any(), any(), anyInt(),
+    when(libraryCardDAO.insertLibraryCard(anyInt(), any(), any(), anyInt(),
         any())).thenReturn(1);
     when(libraryCardDAO.findLibraryCardById(anyInt())).thenReturn(newLc);
 
     LibraryCard card = service.createLibraryCardForSigningOfficial(user, signingOfficial);
     assertNotNull(card);
     assertEquals(card.getId(), newLc.getId());
-    assertEquals(card.getInstitutionId(), newLc.getInstitutionId());
   }
 
   @Test
@@ -496,7 +521,7 @@ class LibraryCardServiceTest {
     Integer userId = user.getUserId();
     when(libraryCardDAO.findLibraryCardsByUserId(userId))
         .thenReturn(Collections.emptyList());
-    List<LibraryCard> cards = service.removeDaaFromUserLibraryCards(user, 1, 1);
+    List<LibraryCard> cards = service.removeDaaFromUserLibraryCards(user,1);
     assertEquals(0, cards.size());
   }
 
@@ -507,10 +532,9 @@ class LibraryCardServiceTest {
     return user;
   }
 
-  private LibraryCard testLibraryCard(Integer institutionId, Integer userId) {
+  private LibraryCard testLibraryCard(Integer userId) {
     LibraryCard libraryCard = new LibraryCard();
     libraryCard.setId(RandomUtils.nextInt(1, 10));
-    libraryCard.setInstitutionId(institutionId);
     libraryCard.setUserId(userId);
 
     return libraryCard;
